# tp3

./: CMakeLists.txt  README.md  appveyor.yml  changelog.md  generateStudent.py  lumiere.c  lumiere.cpp  pnm_io.c  pnm_io.h  teapotLight.cpp  texture.c  textureDemo.c
.github/workflows/: continuous-integration.yml
textures/: bois.ppm  brique.ppm
